# Rafka

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PUBLISHING.md  README.md  docker-compose.yml
config/: cluster.yml
crates/broker/: Cargo.toml
crates/broker/src/: batching.rs  broker.rs  lib.rs
crates/consumer/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: cluster.rs  lib.rs  memory_pool.rs  metrics.rs  p2p_mesh.rs  zero_copy.rs
crates/core/src/proto/: rafka.proto
crates/producer/: Cargo.toml
crates/producer/src/: connection_pool.rs  lib.rs  producer.rs
crates/storage/: Cargo.toml
k8s/: rafka-deployment.yaml
scripts/: cluster_demo.sh  deploy-k8s.sh  p2p_mesh_demo.sh  performance_demo.sh  prepare_for_publish.sh
src/: lib.rs
