[package]
name = "rafka-consumer"
version = "0.1.0"
edition = "2021"
description = "Consumer client for Rafka message broker"
license = "Apache-2.0"
repository = "https://github.com/Mahir101/rafka"
keywords = ["message-broker", "kafka", "distributed", "messaging"]
categories = ["network-programming", "asynchronous"]

[dependencies]
rafka-core = "0.1.0"
tonic = "0.9"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
prost-types = "0.11"