[package]
name = "rafka-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Rafka - a high-performance message broker"
license = "Apache-2.0"
repository = "https://github.com/Mahir101/rafka"
keywords = ["message-broker", "kafka", "distributed", "messaging"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tokio-stream = "0.1"
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
bytes = "1.4"

[build-dependencies]
tonic-build = "0.9"